force-app/main/default/objects/Facility_Request__c/Facility_Request__c.object-meta.xml
<CustomObject>
    <label>Facility Request</label>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>Facility Request ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facility Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>