force-app/main/default/objects/Facility_Request__c/fields/Additional_Amenities_Required2__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amenities_Required2__c</fullName>
    <label>Additional Amenities Required</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>