force-app/main/default/objects/Facility_Request__c/fields/Additional_Amenities_Required__c.field-meta.xml
<CustomField>
    <fullName>Additional_Amenities_Required__c</fullName>
    <label>Available Amenities Required</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>