force-app/main/default/objects/Facility_Request__c/fields/ApprovalLink__c.field-meta.xml
<CustomField>
    <fullName>ApprovalLink__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/ProcessInstanceWorkitem/&quot; &amp; Id &amp; &quot;/view&quot;, &quot;Approval link&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ApprovalLink</label>
    <type>Text</type>
</CustomField>