force-app/main/default/objects/Facility_Request__c/fields/ApproverName__c.field-meta.xml
<CustomField>
    <fullName>ApproverName__c</fullName>
    <label>ApproverName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>