force-app/main/default/objects/Facility_Request__c/fields/ApproverPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>ApproverPhoneNumber__c</fullName>
    <label>ApproverPhoneNumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>