force-app/main/default/objects/Facility_Request__c/fields/Current_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Name__c</fullName>
    <formula>$User.FirstName &amp; &quot; &quot; &amp; $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Name</label>
    <type>Text</type>
</CustomField>