force-app/main/default/objects/Facility_Request__c/fields/Current_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_User_Phone__c</fullName>
    <formula>$User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current User Phone</label>
    <type>Text</type>
</CustomField>