force-app/main/default/objects/Facility_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>ApproverEmail</label>
    <type>Email</type>
</CustomField>