force-app/main/default/objects/Facility_Request__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>hed__Facility__c</referenceTo>
    <relationshipLabel>Facility Requests</relationshipLabel>
    <relationshipName>Facility_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>