force-app/main/default/objects/Facility_Request__c/fields/Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Type__c</fullName>
    <label>Facility Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>