force-app/main/default/objects/Facility_Request__c/fields/IA_Exam_Hall__c.field-meta.xml
<CustomField>
    <fullName>IA_Exam_Hall__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IA Exam Hall</label>
    <type>Checkbox</type>
</CustomField>