force-app/main/default/objects/Facility_Request__c/fields/Is_Elective__c.field-meta.xml
<CustomField>
    <fullName>Is_Elective__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Elective</label>
    <type>Checkbox</type>
</CustomField>