force-app/main/default/objects/Facility_Request__c/fields/Quantity_Of_Additional_Amenities__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Of_Additional_Amenities__c</fullName>
    <label>Quantity Of Additional Amenities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>