force-app/main/default/objects/Facility_Request__c/fields/Reason_of_Booking__c.field-meta.xml
<CustomField>
    <fullName>Reason_of_Booking__c</fullName>
    <label>Reason of Booking</label>
    <length>255</length>
    <type>Text</type>
</CustomField>