force-app/main/default/objects/Facility_Request__c/fields/Reqester_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Reqester_Phone_Number__c</fullName>
    <formula>$User.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reqester Phone Number</label>
    <type>Text</type>
</CustomField>