force-app/main/default/objects/Facility_Request__c/fields/RequesterEmail__c.field-meta.xml
<CustomField>
    <fullName>RequesterEmail__c</fullName>
    <label>RequesterEmail</label>
    <type>Email</type>
</CustomField>