force-app/main/default/objects/Facility_Request__c/fields/RequesterName__c.field-meta.xml
<CustomField>
    <fullName>RequesterName__c</fullName>
    <formula>$User.FirstName &amp; &quot; &quot; &amp; $User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequesterName</label>
    <type>Text</type>
</CustomField>