force-app/main/default/objects/Facility_Request__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipLabel>Facility Requests</relationshipLabel>
    <relationshipName>Facility_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>