force-app/main/default/objects/Facility_Request__c/fields/TemplateName__c.field-meta.xml
<CustomField>
    <fullName>TemplateName__c</fullName>
    <label>TemplateName</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>