force-app/main/default/objects/Facility_Request__c/fields/Test_Facility_Type__c.field-meta.xml
<CustomField>
    <fullName>Test_Facility_Type__c</fullName>
    <formula>Facility__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Facility Type</label>
    <type>Text</type>
</CustomField>