force-app/main/default/objects/Facility_Request__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Building_Name__c</columns>
    <columns>Facility_Type__c</columns>
    <columns>Start_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>