force-app/main/default/objects/Facility_Request__c/listViews/Today_s_List.listView-meta.xml
<ListView>
    <fullName>Today_s_List</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s List</label>
</ListView>